# idl4

./: .gitignore  .hgignore  AUTHORS  INSTALL  Makefile.am  NEWS  README  README.HG  autogen.sh  configure.in  idl4-config.in
doc/: Makefile.am  (+1 more)
examples/test/: .cvsignore  Makefile.am  WHAT-IS-THIS
examples/test/CVS/: Entries  Repository
examples/test/idl/: Makefile.am  custom.idl  inheritance.idl  test.idl  types.h
examples/test/idl/CVS/: Entries  Repository
examples/test/v2-ia32/: Makefile.am
examples/test/v2-ia32-generic/: Makefile.am
examples/test/v2-ia32-generic/CVS/: Entries  Repository
examples/test/v2-ia32/CVS/: Entries  Repository
examples/test/v4-alpha-generic/: Makefile.am
examples/test/v4-alpha-generic/CVS/: Entries  Repository
examples/test/v4-ia32/: Makefile.am
examples/test/v4-ia32-cs/: Makefile.am
examples/test/v4-ia32-cs/CVS/: Entries  Repository
examples/test/v4-ia32-generic/: Makefile.am
examples/test/v4-ia32-generic/CVS/: Entries  Repository
examples/test/v4-ia32/CVS/: Repository
examples/test/v4-ia64/: Makefile.am
examples/test/v4-ia64-generic/: Makefile.am
examples/test/v4-ia64-generic/CVS/: Entries  Repository
examples/test/v4-ia64/CVS/: Entries  Repository
examples/test/v4-mips64-generic/: Makefile.am
examples/test/v4-mips64-generic/CVS/: Entries  Repository
examples/test/v4-powerpc-generic/: Makefile.am
examples/test/v4-powerpc-generic/CVS/: Entries  Repository
examples/test/x0-arm-generic/: Makefile.am
examples/test/x0-arm-generic/CVS/: Entries  Repository
examples/test/x0-ia32/: Makefile.am
examples/test/x0-ia32-generic/: Makefile.am
examples/test/x0-ia32-generic/CVS/: Entries  Repository
examples/test/x0-ia32/CVS/: Entries  Repository
examples/weaver/: Makefile.am  WHAT-IS-THIS  example.c  main.cc
examples/weaver/CVS/: Entries  Repository
src/: .cvsignore  Makefile.am
src/CVS/: Entries  Repository
src/aoi/: Makefile.am  aoi.cc  check.cc  dump.cc  visitor.cc
src/aoi/CVS/: Entries  Repository
src/arch/: Makefile.am  dummy.cc  list.cc  tools.cc
src/arch/CVS/: Entries  Repository
src/arch/v2/: Makefile.am  ms.cc
src/arch/v2/CVS/: Entries  Repository
src/arch/v2/ia32/: Makefile.am  ms.cc
src/arch/v2/ia32/CVS/: Entries  Repository
src/arch/v4/: Makefile.am  clientcall.cc  fcc.cc  ms.cc  optimizer.cc  serverloop.cc  vcc.cc
src/arch/v4/CVS/: Entries  Repository
src/arch/v4/ia32/: Makefile.am  clientcall.cc  ms.cc
src/arch/v4/ia32/CVS/: Entries  Repository
src/arch/v4/ia64/: Makefile.am  ms.cc
src/arch/v4/ia64/CVS/: Entries  Repository
src/arch/x0/: Makefile.am  clientcall.cc  dump.cc  fcc.cc  fmc.cc  ms.cc  optimizer.cc  rooster.cc  serverloop.cc  vcc.cc
src/arch/x0/CVS/: Entries  Repository
src/arch/x0/ia32/: Makefile.am  clientcall.cc  lipc.cc  ms.cc  serverloop.cc
src/arch/x0/ia32/CVS/: Entries  Repository
src/base/: Makefile.am  getopt.c  getopt1.c  main.cc  tools.cc  version.cc
src/base/CVS/: Entries  Repository
src/base/lib/: Makefile.am  tools.cc
src/base/lib/CVS/: Entries  Repository
src/be/: Makefile.am  basictypes.cc  constants.cc  cross.cc  dependencies.cc  helpers.cc  interface.cc  operations.cc  parameter.cc  scope.cc  source.cc  test.cc  varsource.cc
src/be/CVS/: Entries  Repository
src/be/ops/: Makefile.am  alloc.cc  array.cc  compat.cc  dummy.cc  fpagemap.cc  simplecopy.cc  subarray.cc  untilzero.cc
src/be/ops/CVS/: Entries  Repository
src/be/types/: Makefile.am  alias.cc  enum.cc  float.cc  fpage.cc  integer.cc  object.cc  opaque.cc  pointer.cc  sequence.cc  string.cc  struct.cc  threadid.cc  union.cc  word.cc
src/be/types/CVS/: Entries  Repository
src/cast/: Makefile.am  cast.cc  clone.cc  dfs.cc  visitor.cc
src/cast/CVS/: Entries  Repository
src/fe/: Makefile.am
src/fe/CVS/: Entries  Repository
src/fe/c++/: .cvsignore  Makefile.am  context.cc  parser.yy  scanner.ll  symtab.cc
src/fe/c++/CVS/: Entries  Repository
src/fe/idl/: .cvsignore  Makefile.am  context.cc  import.cc  parser.yy  scanner.ll
src/fe/idl/CVS/: Entries  Repository
src/fe/lib/: Makefile.am  context.cc  helpers.cc
src/fe/lib/CVS/: Entries  Repository
src/include/: Makefile.am  aoi.h  base.h  be.h  cast.h  check.h  cross.h  dump.h  globals.h  ms.h  ops.h
src/include/CVS/: Entries  Repository
src/include/arch/: dummy.h  v2.h  v4.h  x0.h
src/include/arch/CVS/: Entries  Repository
src/include/fe/: c++.h  compiler.h  errors.h  idl.h
src/include/fe/CVS/: Entries  Repository
src/include/user/: Makefile.am
src/include/user/CVS/: Entries  Repository
src/include/user/idl4/: Makefile.am  idl4.h  macros.h  test.h
src/test/: Makefile.am
src/test/CVS/: Entries  Repository
src/test/api/CVS/: Repository
src/test/api/v2/: fpage.c  main.c  pager.c
src/test/api/v2/CVS/: Entries  Repository
src/test/api/v4/: fpage.cc  main.cc
src/test/api/v4/CVS/: Entries  Repository
src/test/api/x0/: fpage.c  main.c  pager.c
src/test/api/x0/CVS/: Entries  Repository
src/test/arch/CVS/: Repository
src/test/arch/alpha/: __divlu.S  __divqu.S  __remlu.S  __remqu.S  crt0-alpha.S  divide.S  io.c
src/test/arch/alpha/CVS/: Entries  Repository
src/test/arch/arm/: crt0-arm.S  spinlock.c
src/test/arch/arm/CVS/: Entries  Repository
src/test/arch/generic/: corba.c  malloc.c  printf.c  random.c  string.c  tools.c
src/test/arch/generic/CVS/: Entries  Repository
src/test/arch/ia32/: crt0-ia32.S  spinlock.c
src/test/arch/ia32/CVS/: Entries  Repository
src/test/arch/ia64/: crt0-ia64.S  io.c  spinlock.c
src/test/arch/ia64/CVS/: Entries  Repository
src/test/arch/mips64/: crt0-mips64.S  io.c
src/test/arch/powerpc/: crt0-powerpc.S  io.c
src/test/glue/: Makefile.am
src/test/glue/CVS/: Entries  Repository
src/test/glue/v2-ia32/: Makefile.am
src/test/glue/v4-alpha/: Makefile.am
src/test/glue/v4-ia32/: Makefile.am  putc.c
src/test/glue/v4-ia64/: Makefile.am
src/test/glue/v4-mips64/: Makefile.am
src/test/glue/v4-powerpc/: Makefile.am
src/test/glue/x0-arm/: Makefile.am  putc.c
src/test/glue/x0-ia32/: Makefile.am
(+178 files in other folders)
